<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="5dp"
    app:cardPreventCornerOverlap="false">

    <RelativeLayout
        android:id="@+id/repository_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/repository_title"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/repository_title_mock"
            android:textSize="20sp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/repository_description"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/repository_title"
            android:text="@string/repository_description_mock"
            android:textSize="15sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/repository_forks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/repository_description"
            android:drawableLeft="@drawable/ic_fork"
            android:gravity="center_vertical"
            android:text="@string/repository_forks_mock"
            android:textColor="@color/repository_numbers_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/repository_stars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/repository_description"
            android:layout_toRightOf="@id/repository_forks"
            android:drawableLeft="@drawable/ic_star"
            android:gravity="center_vertical"
            android:text="@string/repository_stargazers_mock"
            android:textColor="@color/repository_numbers_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/repository_owner_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/repository_owner_img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_account_circle_white_24dp"
                app:civ_border_color="#FFFF"
                app:civ_border_width="2dp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/repository_owner_name"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/repository_owner_mock"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>