<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="@dimen/card_margin_bottom"
    app:cardCornerRadius="2dp"
    app:cardPreventCornerOverlap="false">

    <RelativeLayout
        android:id="@+id/pull_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/pull_title"
            android:layout_width="300dp"
            android:paddingTop="@dimen/card_title_top_padding"
            android:paddingBottom="@dimen/card_title_bottom_padding"
            android:paddingLeft="@dimen/card_title_left_right_padding"
            android:paddingRight="@dimen/card_title_left_right_padding"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:ellipsize="end"
            android:lines="2"
            android:text="@string/pull_title_mock"
            android:textSize="24sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/pull_body"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/pull_title"
            android:paddingBottom="@dimen/card_subtext_bottom_padding"
            android:paddingLeft="@dimen/card_subtext_left_right_padding"
            android:paddingRight="@dimen/card_subtext_left_right_padding"
            android:text="@string/pull_body_mock"
            android:ellipsize="end"
            android:lines="5"
            android:textSize="14sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/pull_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pull_body"
            android:drawableLeft="@drawable/ic_date_range_white_24dp"
            android:gravity="center_vertical"
            android:padding="@dimen/card_action_padding"
            android:text="@string/pull_created_date_mock"
            android:textColor="@color/pull_date_color"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/pull_user_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:paddingRight="@dimen/card_image_subtitle_container_right_padding"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/pull_user_img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_account_circle_white_24dp"
                app:civ_border_color="#FFFF"
                app:civ_border_width="2dp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/pull_username"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/repository_owner_mock"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>